--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,6 @@
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
-# TODO Remove this: CI test.
 
 trigger:
   - master
@@ -13,6 +12,9 @@ pool:
 steps:
   - script: echo Hello, world!
     displayName: "Run a one-line script"
+
+  - script: terraform plan
+    displayName: "Create Terraform execution plan"
 
   - script: |
       echo Add other tasks to build, test, and deploy your project.
