--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
 
   - task: CopyFiles@2
     inputs:
-      contents: '**\**'
+      contents: "$(System.DefaultWorkingDirectory)\**"
       targetFolder: $(Build.ArtifactStagingDirectory)
 
   - task: PublishBuildArtifacts@1
